# image_processing_pkg

./: .gitignore  CMakeLists.txt  README.md  package.xml
launch/: image_processing_pkg_launch.py  image_processing_pkg_launch.xml
src/: image_crop_client_node.cpp  image_crop_node.cpp  image_crop_none.cpp  image_crop_server_node.cpp  subscriber_member_image.cpp
srv/: ImageCrop.srv
